WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
252837
REGRESSION (
260575@main
): [ iOS ] media/video-element-fullscreen-not-in-dom-accelerated-iphone.html is a constant failure.
https://bugs.webkit.org/show_bug.cgi?id=252837
Summary
REGRESSION (260575@main): [ iOS ] media/video-element-fullscreen-not-in-dom-a...
Bri Harris
Reported
2023-02-23 09:35:30 PST
media/video-element-fullscreen-not-in-dom-accelerated-iphone.html is a constant failure on iOS 16. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=media%2Fvideo-element-fullscreen-not-in-dom-accelerated-iphone.html
I was able to replicate this failure on iOS 16 ToT running on Apple Silicon as follows: run-webkit-tests media/video-element-fullscreen-not-in-dom-accelerated-iphone.html DIFF TEXT: @@ -1,6 +1,6 @@ Test that playing a video in fullscreen is accelerated. EVENT(webkitbeginfullscreen) -EXPECTED (window.internals.mediaPlayerRenderingCanBeAccelerated(video) == 'true') OK +EXPECTED (window.internals.mediaPlayerRenderingCanBeAccelerated(video) == 'true'), OBSERVED 'false' FAIL END OF TEST
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-02-23 09:35:50 PST
<
rdar://problem/105838163
>
EWS
Comment 2
2023-02-23 09:57:36 PST
Test gardening commit
260749@main
(af221f176240): <
https://commits.webkit.org/260749@main
> Reviewed commits have been landed. Closing PR #10598 and removing active labels.
Ryan Haddad
Comment 3
2023-02-23 11:45:16 PST
https://commits.webkit.org/260575@main
seems like it could be the regression point.
Bri Harris
Comment 4
2023-02-23 14:06:37 PST
I was able to verify
260575@main
as the regression point as testing on this build produces a failure; but is passing on
260574@main
.
Jer Noble
Comment 5
2023-03-09 13:20:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/11324
EWS
Comment 6
2023-03-10 08:40:19 PST
Committed
261501@main
(d7107716d181): <
https://commits.webkit.org/261501@main
> Reviewed commits have been landed. Closing PR #11324 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug