REGRESSION (260575@main): [ iOS ] media/video-element-fullscreen-not-in-dom-accelerated-iphone.html is a constant failure. https://bugs.webkit.org/show_bug.cgi?id=252837 rdar://105838163

Reviewed by Ryosuke Niwa.

When we did the "don't host layers from the WebContent process" work, we no longer create a separate
fullscreen video layer and give that layer to the HTMLMediaElement (because we don't create _any_
layers in the WebContent process). So the existing check for a m_videoFullscreenLayer as a proxy of
whether we're in picture-in-picture or fullscreen mode stopped working.

Just replace the layer check with an explicit check of the fullscreen mode.

* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaPlayerRenderingCanBeAccelerated):

Canonical link: https://commits.webkit.org/261501@main